--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -1,15 +1,11 @@
 version: 2.1
 
 description: >
-  Sample orb description
-# What will your orb allow users to accomplish?
-# Descriptions should be short, simple, and informative.
+  Commands for building, cross-compiling and testing rust projects.
+  Based on the circleci/rust orb.
 
-# This information will be displayed in the orb registry and is not mandatory.
 display:
-  home_url: "https://www.example.com/docs"
   source_url: "https://github.com/phoenix-rs/orb-rust"
 
-# If your orb requires other orbs, you can import them like this. Otherwise remove the "orbs" stanza.
-# orbs:
-#  hello: circleci/hello-build@0.0.5
+orbs:
+  hello: circleci/rust@1.6.0
