--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 # orb.yml is "packed" from source, and not published directly from the repository.
 orb.yml
 .DS_Store
+
+# Added by cargo
+
+/target
