try with crate-defined executor

--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -24,8 +24,8 @@ workflows:
           matrix:
             parameters:
               target:
-                - linux-amd64
-                - linux-arm64
+                - rust/linux-amd64
+                - rust/linux-arm64
                 - custom-docker
           store_artifact: true
           artifact_destination: testapp-<<matrix.target>>
