--- a/src/executors/linux-arm64.yml
+++ b/src/executors/linux-arm64.yml
@@ -1,5 +1,5 @@
 description: >
   Linux arm64 (aarch64) executor with the orb rust_version
 machine:
-  image: ubuntu-2204
+  image: ubuntu-2204:current
 resource_class: arm.large
