--- a/src/jobs/lint-test-build.yml
+++ b/src/jobs/lint-test-build.yml
@@ -52,7 +52,7 @@ steps:
       steps:
         - restore_cache:
             keys:
-              - &cache-key cargo-<<parameters.cache_version>>-{{ arch }}-{{ checksum "Cargo.lock" }}
+              - &cache-key cargo-<<parameters.cache_version>>-<<parameters.target>>-{{ checksum "Cargo.lock" }}
   - when:
       condition: <<parameters.target_setup>>
       steps:
